fix(bond): fix nft row card wrap in mobile

--- a/src/components/Header/topbar.scss
+++ b/src/components/Header/topbar.scss
@@ -48,9 +48,6 @@
 
 @media screen and (max-width: 512px) {
   #choose-bond-view {
-    .MuiGrid-container {
-      flex-wrap: wrap !important;
-    }
     .bond-hero-title {
       font-size: 14px !important;
     }
